crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__continue_in_finally.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLE0116 `continue` not supported inside `finally` clause
 --> continue_in_finally.py:5:9
  |
3 |         pass
4 |     finally:
5 |         continue  # [continue-in-finally]
  |         ^^^^^^^^
6 |
7 | while True:

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:16:13
   |
14 |             pass
15 |         finally:
16 |             continue  # [continue-in-finally]
   |             ^^^^^^^^
17 |         pass

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:26:17
   |
24 |         match test:
25 |             case "aa":
26 |                 continue  # [continue-in-finally]
   |                 ^^^^^^^^
27 |
28 | while True:

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:33:13
   |
31 |     finally:
32 |         with "aa" as f:
33 |             continue  # [continue-in-finally]
   |             ^^^^^^^^
34 |
35 | while True:

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:40:13
38 |     finally:
39 |         if True:
40 |             continue  # [continue-in-finally]
   |             ^^^^^^^^
41 |         continue  # [continue-in-finally]

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:41:9
   |
39 |         if True:
40 |             continue  # [continue-in-finally]
41 |         continue  # [continue-in-finally]
   |         ^^^^^^^^
42 |
43 |         def test():

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:49:17
   |
47 |                 pass
48 |             finally:
49 |                 continue  # [continue-in-finally]
   |                 ^^^^^^^^

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:56:9
54 |         pass
55 |     finally:
56 |         continue  # [continue-in-finally]
   |         ^^^^^^^^
57 |
58 |         def test():

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:69:9
   |
67 |         for i in range(12):
68 |             continue
69 |         continue  # [continue-in-finally]
   |         ^^^^^^^^
70 |
71 |         while True:

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:74:13
   |
72 |             pass
73 |         else:
74 |             continue  # [continue-in-finally]
   |             ^^^^^^^^
75 |
76 |         def test():

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:89:13
   |
87 |             pass
88 |         elif False:
89 |             continue  # [continue-in-finally]
   |             ^^^^^^^^
90 |         else:
91 |             continue  # [continue-in-finally]

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:91:13
   |
89 |             continue  # [continue-in-finally]
90 |         else:
91 |             continue  # [continue-in-finally]
   |             ^^^^^^^^
92 |             for i in range(10):
93 |                 pass

PLE0116 `continue` not supported inside `finally` clause
  --> continue_in_finally.py:95:17
   |
93 |                 pass
94 |             else:
95 |                 continue  # [continue-in-finally]
   |                 ^^^^^^^^
