crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__max_args_with_dummy_variables.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0913 Too many arguments in function definition (6 > 5)
  --> too_many_arguments_params.py:9:5
 7 | # Too many args (6/4) for max_args=4
 8 | # Too many args (6/5) for dummy_variable_rgx ~ "skip_.*"
 9 | def f(x, y, z, t, u, v):
   |     ^
10 |     pass
