crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__max_boolean_expressions.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR0916 Too many Boolean expressions (6 > 5)
  --> too_many_boolean_expressions.py:11:6
   |
 9 | elif (a and b) and c and d and e:
10 |     ...
11 | elif (a and b) and c and d and e and f:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |     ...
13 | elif (a and b) and c and d and e and f and g:

PLR0916 Too many Boolean expressions (7 > 5)
  --> too_many_boolean_expressions.py:13:6
   |
11 | elif (a and b) and c and d and e and f:
12 |     ...
13 | elif (a and b) and c and d and e and f and g:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |     ...
15 | elif (a and b) and c and d and e and f and g and h:

PLR0916 Too many Boolean expressions (8 > 5)
  --> too_many_boolean_expressions.py:15:6
   |
13 | elif (a and b) and c and d and e and f and g:
14 |     ...
15 | elif (a and b) and c and d and e and f and g and h:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
16 |     ...
17 | elif (a and b) and c and d and e and f and g and h and i:

PLR0916 Too many Boolean expressions (9 > 5)
  --> too_many_boolean_expressions.py:17:6
   |
15 | elif (a and b) and c and d and e and f and g and h:
16 |     ...
17 | elif (a and b) and c and d and e and f and g and h and i:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
18 |     ...
19 | elif (a and b) and c and d and e and f and g and h and i and j:

PLR0916 Too many Boolean expressions (10 > 5)
  --> too_many_boolean_expressions.py:19:6
   |
17 | elif (a and b) and c and d and e and f and g and h and i:
18 |     ...
19 | elif (a and b) and c and d and e and f and g and h and i and j:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 |     ...
21 | elif (a and b) and c and d and e and f and g and h and i and j and k:

PLR0916 Too many Boolean expressions (11 > 5)
  --> too_many_boolean_expressions.py:21:6
   |
19 | elif (a and b) and c and d and e and f and g and h and i and j:
20 |     ...
21 | elif (a and b) and c and d and e and f and g and h and i and j and k:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 |     ...
23 | elif (a and b) and c and d and e and f and g and h and i and j and k and l:

PLR0916 Too many Boolean expressions (12 > 5)
  --> too_many_boolean_expressions.py:23:6
   |
21 | elif (a and b) and c and d and e and f and g and h and i and j and k:
22 |     ...
23 | elif (a and b) and c and d and e and f and g and h and i and j and k and l:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |     ...
25 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m:

PLR0916 Too many Boolean expressions (13 > 5)
  --> too_many_boolean_expressions.py:25:6
   |
23 | elif (a and b) and c and d and e and f and g and h and i and j and k and l:
24 |     ...
25 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
26 |     ...
27 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n:

PLR0916 Too many Boolean expressions (14 > 5)
  --> too_many_boolean_expressions.py:27:6
   |
25 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m:
26 |     ...
27 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
28 |     ...
29 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o:

PLR0916 Too many Boolean expressions (15 > 5)
  --> too_many_boolean_expressions.py:29:6
   |
27 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n:
28 |     ...
29 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
30 |     ...
31 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p:

PLR0916 Too many Boolean expressions (16 > 5)
  --> too_many_boolean_expressions.py:31:6
   |
29 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o:
30 |     ...
31 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 |     ...
33 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q:

PLR0916 Too many Boolean expressions (17 > 5)
  --> too_many_boolean_expressions.py:33:6
   |
31 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p:
32 |     ...
33 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
34 |     ...
35 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r:

PLR0916 Too many Boolean expressions (18 > 5)
  --> too_many_boolean_expressions.py:35:6
   |
33 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q:
34 |     ...
35 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
36 |     ...
37 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s:

PLR0916 Too many Boolean expressions (19 > 5)
  --> too_many_boolean_expressions.py:37:6
   |
35 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r:
36 |     ...
37 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
38 |     ...
39 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t:

PLR0916 Too many Boolean expressions (20 > 5)
  --> too_many_boolean_expressions.py:39:6
   |
37 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s:
38 |     ...
39 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
40 |     ...
41 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u:

PLR0916 Too many Boolean expressions (21 > 5)
  --> too_many_boolean_expressions.py:41:6
   |
39 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t:
40 |     ...
41 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
42 |     ...
43 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v:

PLR0916 Too many Boolean expressions (22 > 5)
  --> too_many_boolean_expressions.py:43:6
   |
41 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u:
42 |     ...
43 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
44 |     ...
45 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and …

PLR0916 Too many Boolean expressions (23 > 5)
  --> too_many_boolean_expressions.py:45:6
   |
43 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v:
44 |     ...
45 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
46 |     ...
47 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and …

PLR0916 Too many Boolean expressions (24 > 5)
  --> too_many_boolean_expressions.py:47:6
   |
45 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w:
46 |     ...
47 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and x:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
48 |     ...
49 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and x and …

PLR0916 Too many Boolean expressions (25 > 5)
  --> too_many_boolean_expressions.py:49:6
   |
47 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and x:
48 |     ...
49 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and x and y:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
50 |     ...
51 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and x and y and …

PLR0916 Too many Boolean expressions (26 > 5)
  --> too_many_boolean_expressions.py:51:6
   |
49 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and x and y:
50 |     ...
51 | elif (a and b) and c and d and e and f and g and h and i and j and k and l and m and n and o and p and q and r and s and t and u and v and w and x and y and z:
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
52 |     ...
53 | else:
